--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:900&display=swap');
 *{
   margin: 0px;
-  /* padding: 0; */
-  /* top: 0; */
+  padding: 0;
+  top: 0;
   font-family: 'Newsreader', serif;
-  /* background-color: #ffe5cf; */
+  background-color: #ffe5cf;
   
 }
 .sidebar{
